# asociacion_mutual

./: .env.example  .gitignore  INTEGRATION_TESTING.md  QUICK_TEST_COMMANDS.md  README.md  composer.json  eslint.config.mjs  index.html  mutual.sqlite  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test-integration.ps1  tsconfig.json  vite.config.ts
app/: layout.tsx  page.tsx  providers.tsx
app/components/: Navbar.tsx  (+10 more)
back-mutual/: AUTH_CRUD.md  AUTH_FLOW_EXPLAINED.md  FRONTEND_AXIOS_CONFIG.md  HOW_TO_USE_AUTHSERVICE.md  PROTECTED_ROUTES.md  TAURI_SETUP_QUICK.md
hooks/: useAsociados.ts  useAuth.ts  useBeneficiarios.ts  useCobertura.ts  useComprobante.ts  useConfiguracion.ts  useFallecidos.ts  usePagos.ts  useRole.ts  useUsers.ts
plans/: 001-secure-token-httponly-https.md  002-csp-headers-backend-auth.md  003-react-query-pagination-caching.md  EXECUTION_SUMMARY.md  README.md
services/: AuthService.tsx  api.tsx
src/: App.tsx  globals.css  main.tsx  providers.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/database/migrations/: 2026_07_10_000001_create_licencia_table.php
src-tauri/src/: db.rs  lib.rs
src-tauri/src/commands/: asociados.rs  auth.rs  backup.rs  beneficiarios.rs  cobertura.rs  configuracion.rs  fallecidos.rs  license.rs  mod.rs  pagos.rs  session.rs  users.rs
src-tauri/src/models/: asociado.rs  beneficiario.rs  cobertura.rs  configuracion.rs  fallecido.rs  licencia.rs  mod.rs  pago.rs  user.rs
src-tauri/src/services/: cobertura_service.rs  mod.rs  numero_a_letras.rs
tools/: license_output.txt  license_tool.py
(+72 files in other folders)
