[package]
name = "app"
version = "0.1.0"
description = "Asociación Mutual El Rosario"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
